# CalcExpr

./: .gitignore  CMakeLists.txt  README-en.md  README-es.md  README.md  calculator.h  main.c  递归下降解析器原理详解.md
.github/workflows/: cmake.yml
doc/: README-es.md  README-zh.md
include/: calculator.h  command.h  debug.h  lexer.h  logger.h  parser.h  parser_debug.h  platform.h  token.h
src/: calculator.c  command.c  debug.c  lexer.c  logger.c  main.c  parser.c
src/platform/: platform_linux.c  platform_mac.c  platform_win.c
test/: test_calculator.c
